--- a/OAS/tapi-common.yaml
+++ b/OAS/tapi-common.yaml
@@ -176,6 +176,192 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  /data/tapi-common:context/profile/:
+    post:
+      tags:
+      - "tapi-common"
+      summary: "creates tapi.common.Profile"
+      description: "none"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Profile.body-param"
+        description: "tapi.common.Profile to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ProfileWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  /data/tapi-common:context/profile={uuid}/:
+    get:
+      tags:
+      - "tapi-common"
+      summary: "returns tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.Profile"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-common"
+      summary: "creates or updates tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.Profile.body-param"
+        description: "tapi.common.Profile to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ProfileWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      summary: "removes tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/tapi-common:context/profile={uuid}/name/:
+    post:
+      tags:
+      - "tapi-common"
+      summary: "creates tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.NameAndValue.body-param"
+        description: "tapi.common.NameAndValue to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  /data/tapi-common:context/profile={uuid}/name={value-name}/:
+    get:
+      tags:
+      - "tapi-common"
+      summary: "returns tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-common"
+      summary: "creates or updates tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.NameAndValue.body-param"
+        description: "tapi.common.NameAndValue to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      summary: "removes tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/service-interface-point/:
     post:
       tags:
@@ -641,6 +827,30 @@ definitions:
     - "INPUT"
     - "OUTPUT"
     - "UNIDENTIFIED_OR_UNKNOWN"
+  tapi.common.Profile:
+    type: "object"
+    properties:
+      name:
+        type: "array"
+        description: "List of names. This value is unique in some namespace but may\
+          \ change during the life of the entity.\r\n                A name carries\
+          \ no semantics with respect to the purpose of the entity."
+        items:
+          $ref: "#/definitions/tapi.common.NameAndValue"
+      uuid:
+        type: "string"
+        description: "UUID: An identifier that is universally unique within an identifier\
+          \ space, where the identifier space is itself globally unique, and immutable.\r\
+          \n                An UUID carries no semantics with respect to the purpose\
+          \ or state of the entity.\r\n                UUID here uses string representation\
+          \ as defined in RFC 4122.  The canonical representation uses lowercase characters.\r\
+          \n                Pattern: [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-'\
+          \ + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12} \r\n                Example of a UUID\
+          \ in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
+  tapi.common.ProfileWrapper:
+    properties:
+      profile:
+        $ref: "#/definitions/tapi.common.Profile"
   tapi.common.ServiceInterfacePoint:
     allOf:
     - $ref: "#/definitions/tapi.common.AdminStatePac"
@@ -685,6 +895,11 @@ definitions:
             \ context."
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+        profile:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.Profile"
       description: "This object class represents the scope of control that a particular\
         \ SDN controller has with respect to a particular network, (i.e., encompassing\
         \ a designated set of interconnected (virtual) network elements).\r\n    \
