--- a/OAS/tapi-notification.yaml
+++ b/OAS/tapi-notification.yaml
@@ -192,6 +192,192 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
+  /data/tapi-common:context/profile/:
+    post:
+      tags:
+      - "tapi-common"
+      summary: "creates tapi.common.Profile"
+      description: "none"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Profile.body-param"
+        description: "tapi.common.Profile to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ProfileWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  /data/tapi-common:context/profile={uuid}/:
+    get:
+      tags:
+      - "tapi-common"
+      summary: "returns tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.Profile"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-common"
+      summary: "creates or updates tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.Profile.body-param"
+        description: "tapi.common.Profile to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ProfileWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      summary: "removes tapi.common.Profile"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/tapi-common:context/profile={uuid}/name/:
+    post:
+      tags:
+      - "tapi-common"
+      summary: "creates tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.NameAndValue.body-param"
+        description: "tapi.common.NameAndValue to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+  /data/tapi-common:context/profile={uuid}/name={value-name}/:
+    get:
+      tags:
+      - "tapi-common"
+      summary: "returns tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+    put:
+      tags:
+      - "tapi-common"
+      summary: "creates or updates tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.NameAndValue.body-param"
+        description: "tapi.common.NameAndValue to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      summary: "removes tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/tapi-common:context/service-interface-point/:
     post:
       tags:
@@ -541,6 +727,25 @@ paths:
             $ref: "#/definitions/tapi.notification.notificationcontext.EventNotificationWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/attribute-value-change/:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.AttributeValueChange"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.AttributeValueChange"
+          schema:
+            $ref: "#/definitions/tapi.notification.AttributeValueChangeWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/name={value-name}/:
     get:
       tags:
@@ -565,49 +770,6 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
-        400:
-          description: "Internal error"
-  /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/object-notification/:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.ObjectNotification"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of event-notification"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.ObjectNotification"
-          schema:
-            $ref: "#/definitions/tapi.notification.ObjectNotificationWrapper"
-        400:
-          description: "Internal error"
-  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/object-notification/changed-attributes={value-name}/
-  : get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.NameAndValueChange"
-      description: "The list of relevant changed attributes and their values."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of event-notification"
-        required: true
-        type: "string"
-      - name: "value-name"
-        in: "path"
-        description: "Id of changed-attributes"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.NameAndValueChange"
-          schema:
-            $ref: "#/definitions/tapi.notification.NameAndValueChangeWrapper"
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/service-interface-point/:
@@ -2199,6 +2361,30 @@ definitions:
     - "INPUT"
     - "OUTPUT"
     - "UNIDENTIFIED_OR_UNKNOWN"
+  tapi.common.Profile:
+    type: "object"
+    properties:
+      name:
+        type: "array"
+        description: "List of names. This value is unique in some namespace but may\
+          \ change during the life of the entity.\r\n                A name carries\
+          \ no semantics with respect to the purpose of the entity."
+        items:
+          $ref: "#/definitions/tapi.common.NameAndValue"
+      uuid:
+        type: "string"
+        description: "UUID: An identifier that is universally unique within an identifier\
+          \ space, where the identifier space is itself globally unique, and immutable.\r\
+          \n                An UUID carries no semantics with respect to the purpose\
+          \ or state of the entity.\r\n                UUID here uses string representation\
+          \ as defined in RFC 4122.  The canonical representation uses lowercase characters.\r\
+          \n                Pattern: [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-'\
+          \ + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12} \r\n                Example of a UUID\
+          \ in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
+  tapi.common.ProfileWrapper:
+    properties:
+      profile:
+        $ref: "#/definitions/tapi.common.Profile"
   tapi.common.ServiceInterfacePoint:
     allOf:
     - $ref: "#/definitions/tapi.common.AdminStatePac"
@@ -2243,6 +2429,11 @@ definitions:
             \ context."
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+        profile:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.Profile"
       description: "This object class represents the scope of control that a particular\
         \ SDN controller has with respect to a particular network, (i.e., encompassing\
         \ a designated set of interconnected (virtual) network elements).\r\n    \
@@ -2303,6 +2494,16 @@ definitions:
       state:
         description: "The requested update of Administrative State."
         $ref: "#/definitions/tapi.common.AdministrativeState"
+  tapi.notification.AttributeValueChange:
+    type: "object"
+    properties:
+      changed-attributes:
+        type: "string"
+        description: "The list of relevant changed attributes and their values."
+  tapi.notification.AttributeValueChangeWrapper:
+    properties:
+      attribute-value-change:
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
@@ -2383,9 +2584,9 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      object-notification:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.notification.ObjectNotification"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -2562,22 +2763,6 @@ definitions:
     properties:
       notification:
         $ref: "#/definitions/tapi.notification.Notification"
-  tapi.notification.ObjectNotification:
-    type: "object"
-    properties:
-      changed-attributes:
-        type: "array"
-        description: "The list of relevant changed attributes and their values."
-        items:
-          $ref: "#/definitions/tapi.notification.NameAndValueChange"
-      object-content:
-        type: "string"
-        description: "The object content, e.g. all the attributes of a newly created\
-          \ object.\r\n                The mapping is not specified."
-  tapi.notification.ObjectNotificationWrapper:
-    properties:
-      object-notification:
-        $ref: "#/definitions/tapi.notification.ObjectNotification"
   tapi.notification.SourceIndicator:
     type: "string"
     enum:
