--- a/OAS/tapi-topology.yaml
+++ b/OAS/tapi-topology.yaml
@@ -1901,6 +1901,78 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node-edge-point/profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node-edge-point/sink-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of sink-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node-edge-point/source-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of source-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node-edge-point/supported-cep-layer-protocol={layer-protocol-qualifier}/
   : get:
       tags:
@@ -4432,6 +4504,93 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/owned-node-edge-point={owned-node-edge-point-uuid}/profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/owned-node-edge-point={owned-node-edge-point-uuid}/sink-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of sink-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/owned-node-edge-point={owned-node-edge-point-uuid}/source-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of source-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:node/owned-node-edge-point={owned-node-edge-point-uuid}/supported-cep-layer-protocol={layer-protocol-qualifier}/
   : get:
       tags:
@@ -6947,6 +7106,108 @@ paths:
           description: "tapi.common.NameAndValue"
           schema:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/sink-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of sink-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/source-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of event-notification"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of source-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
         400:
           description: "Internal error"
   ? /data/tapi-common:context/tapi-notification:notification-context/event-notification={uuid}/tapi-topology:topology/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-cep-layer-protocol={layer-protocol-qualifier}/
@@ -11033,6 +11294,108 @@ paths:
             $ref: "#/definitions/tapi.common.NameAndValueWrapper"
         400:
           description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/sink-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of sink-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/source-profile={profile-uuid}/
+  : get:
+      tags:
+      - "tapi-topology"
+      summary: "returns tapi.common.ProfileRef"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of topology"
+        required: true
+        type: "string"
+      - name: "node-uuid"
+        in: "path"
+        description: "Id of node"
+        required: true
+        type: "string"
+      - name: "owned-node-edge-point-uuid"
+        in: "path"
+        description: "Id of owned-node-edge-point"
+        required: true
+        type: "string"
+      - name: "profile-uuid"
+        in: "path"
+        description: "Id of source-profile"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.ProfileRef"
+          schema:
+            $ref: "#/definitions/tapi.common.ProfileRefWrapper"
+        400:
+          description: "Internal error"
   ? /data/tapi-common:context/tapi-topology:topology-context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/supported-cep-layer-protocol={layer-protocol-qualifier}/
   : get:
       tags:
@@ -11839,6 +12202,17 @@ definitions:
           \n                Pattern: [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-'\
           \ + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12} \r\n                Example of a UUID\
           \ in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
+  tapi.common.ProfileRef:
+    type: "object"
+    properties:
+      profile-uuid:
+        type: "string"
+        description: "none"
+        x-path: "/tapi-common:context/tapi-common:profile/tapi-common:uuid"
+  tapi.common.ProfileRefWrapper:
+    properties:
+      profile:
+        $ref: "#/definitions/tapi.common.ProfileRef"
   tapi.common.ProfileWrapper:
     properties:
       profile:
@@ -12079,18 +12453,18 @@ definitions:
   tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
-      service-interface-point:
+      attribute-value-change:
         description: "none"
-        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+        $ref: "#/definitions/tapi.notification.AttributeValueChange"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
   tapi.notification.EventNotificationAugmentation2:
     type: "object"
     properties:
-      attribute-value-change:
+      service-interface-point:
         description: "none"
-        $ref: "#/definitions/tapi.notification.AttributeValueChange"
+        $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -13072,9 +13446,11 @@ definitions:
         \ ODU1; ODU2; ODU4 : 80\r\n            - ODU0; ODU1; ODU2; ODU3; ODU4 : 64\r\
         \n            - ODUflex; ODU2; ODU3; ODU4 : 64 [64/ts] : 10G\r\n         \
         \   - ODUflex; ODU2; ODU4: 80 [80/ts] : 10G\r\n            - ODU1; ODU2; ODU3;\
-        \ ODUCn : 40 [mult. for n]\r\n            - OTSiMC; MC; OMS; OTS : 80 : 50G\r\
-        \n            - ODUCn; OTSi : 2 : 200G\r\n            - ODUCn; OTSi : 1 :\
-        \ 400G\r\n            "
+        \ ODUCn : 40 [mult. for n]\r\n            - ODU2; ODU4; ODUCn: 10 [mult. for\
+        \ n]\r\n            - ODU2; ODU3: ODU4; ODUCn: 8 [mult. for n]\r\n       \
+        \     - ODU3; ODU4; ODUCn: 2 [mult. for n]\r\n            - OTSiMC; MC; OMS;\
+        \ OTS : 80 : 50G\r\n            - ODUCn; OTSi : 2 : 200G\r\n            -\
+        \ ODUCn; OTSi : 1 : 400G\r\n            "
   tapi.topology.MultiplexingSequenceWrapper:
     properties:
       available-mux-sequence:
@@ -13169,9 +13545,6 @@ definitions:
     - $ref: "#/definitions/tapi.common.TerminationPac"
     - type: "object"
       properties:
-        link-port-role:
-          description: "The role of the (conceptual) port of the associated Link."
-          $ref: "#/definitions/tapi.common.PortRole"
         mapped-service-interface-point:
           type: "array"
           description: "A NodeEdgePoint (NEP) may be associated to a ServiceInterfacePoint\
@@ -13181,6 +13554,37 @@ definitions:
             \ be considered experimental."
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePointRef"
+        supported-mux-sequence:
+          type: "array"
+          description: "More detailed description of (potential) capability than 'supportedCepLayerProtocol'."
+          items:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
+        profile:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.ProfileRef"
+        sink-profile:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.ProfileRef"
+        available-mux-sequence:
+          type: "array"
+          description: "More detailed description of available capability than 'supportedCepLayerProtocol'."
+          items:
+            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
+        inter-domain-plug-in-pac:
+          description: "ENNI Identifier."
+          $ref: "#/definitions/tapi.topology.InterDomainPlugInPac"
+        link-port-role:
+          description: "The role of the (conceptual) port of the associated Link."
+          $ref: "#/definitions/tapi.common.PortRole"
+        source-profile:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.ProfileRef"
         aggregated-node-edge-point:
           type: "array"
           description: "A NodeEdgePoint (NEP) instance may aggregate one or more other\
@@ -13188,19 +13592,9 @@ definitions:
             \ are equivalent for usage."
           items:
             $ref: "#/definitions/tapi.topology.NodeEdgePointRef"
-        supported-mux-sequence:
-          type: "array"
-          description: "More detailed description of (potential) capability than 'supportedCepLayerProtocol'."
-          items:
-            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
         layer-protocol-name:
           description: "The layer protocol of the NodeEdgePoint (NEP)."
           $ref: "#/definitions/tapi.common.LayerProtocolName"
-        available-mux-sequence:
-          type: "array"
-          description: "More detailed description of available capability than 'supportedCepLayerProtocol'."
-          items:
-            $ref: "#/definitions/tapi.topology.MultiplexingSequence"
         supported-cep-layer-protocol:
           type: "array"
           description: "The potentially supported protocols and flows.\r\n       \
@@ -13211,9 +13605,6 @@ definitions:
         base-layer-protocol-qualifier:
           type: "string"
           description: "The layer protocol qualifier at the bottom of supported stack."
-        inter-domain-plug-in-pac:
-          description: "ENNI Identifier."
-          $ref: "#/definitions/tapi.topology.InterDomainPlugInPac"
         link-port-direction:
           description: "The orientation of flow at the (conceptual) port of the associated\
             \ Link."
